--- a/prepros-6.config
+++ b/prepros-6.config
@@ -42,6 +42,7 @@
         "scss/external/_aos.scss",
         "scss/external/_ion.rangeSlider.min.scss",
         "scss/external/_slick.scss",
+        "scss/external/_magnific-popup.scss",
         "scss/helpers/_variables.scss",
         "scss/helpers/_mixins.scss",
         "scss/helpers/_helpers.scss",
@@ -53,7 +54,8 @@
         "scss/components/_footer.scss",
         "scss/components/_button.scss",
         "scss/components/_color.scss",
-        "scss/pages/_home.scss"
+        "scss/pages/_home.scss",
+        "scss/pages/_cardetails.scss"
       ]
     }
   ],
