--- a/prepros-6.config
+++ b/prepros-6.config
@@ -55,7 +55,8 @@
         "scss/components/_button.scss",
         "scss/components/_color.scss",
         "scss/pages/_home.scss",
-        "scss/pages/_cardetails.scss"
+        "scss/pages/_cardetails.scss",
+        "scss/pages/_finance.scss"
       ]
     }
   ],
