listing page added

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -56,7 +56,8 @@
         "scss/components/_color.scss",
         "scss/pages/_home.scss",
         "scss/pages/_cardetails.scss",
-        "scss/pages/_finance.scss"
+        "scss/pages/_finance.scss",
+        "scss/pages/_listing.scss"
       ]
     }
   ],
